test/message/vm_display_syntax_error.chakracore.out
beginning
SyntaxError: Expected identifier
   at createScript (vm.js:*)
   at runInThisContext (vm.js:*)
   at Anonymous function (*test*message*vm_display_syntax_error.js:*)
   at Module.prototype._compile (module.js:*)
   at Module._extensions[.js] (module.js:*)
   at Module.prototype.load (module.js:*)
   at tryModuleLoad (module.js:*)
   at Module._load (module.js:*)
   at Module.runMain (module.js:*)
   at startup (bootstrap_node.js:*)
test.vm:*
var 5;
    ^^

SyntaxError: Expected identifier
   at createScript (vm.js:*)
   at runInThisContext (vm.js:*)
   at Anonymous function (*test*message*vm_display_syntax_error.js:*)
   at Module.prototype._compile (module.js:*)
   at Module._extensions[.js] (module.js:*)
   at Module.prototype.load (module.js:*)
   at tryModuleLoad (module.js:*)
   at Module._load (module.js:*)
   at Module.runMain (module.js:*)
   at startup (bootstrap_node.js:*)
